--- a/app/views/home/product.html.erb
+++ b/app/views/home/product.html.erb
@@ -252,13 +252,13 @@ $('.cloudinary-fileupload').bind('fileuploadprogress', function(e, data) {
 })
 </script>
 <script type="text/javascript">
-$('img').error(function(){
+$('img.image_show').error(function(){
 /*var id=$(this).attr('id');
 var res = id.replace("image", "delete");
 $("#"+res).remove();*/
-    //$(this).remove();
-    var tdparent=$(this).parents('td').siblings('td');
-    console.log(tdparent);
+    $(this).remove();
+    $(this).parents('td').siblings('td').children().find('.delete').remove();
+   // console.log(tdparent);
     })
 </script>
 <script type="text/javascript">        
