--- a/app/views/home/product.html.erb
+++ b/app/views/home/product.html.erb
@@ -257,7 +257,7 @@ $('img.image_show').error(function(){
 var res = id.replace("image", "delete");
 $("#"+res).remove();*/
     $(this).remove();
-    $(this).parents('td').siblings('td').children().find('.delete').remove();
+    $(this).parents('td').children().find('.delete').remove();
    // console.log(tdparent);
     })
 </script>
