--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -61,7 +61,7 @@
 
   <div class="span8 offset1"> 
  <h2>Select Any product from your dasboard and click the "Edit Swatches For This Product" Option from the app drodown"</h2>
- <p><%= home %></p>
+ <p><%= @home %></p>
 
 
 	</div> <!-- span8 / right-column -->
