--- a/app/views/home/product.html.erb
+++ b/app/views/home/product.html.erb
@@ -271,7 +271,7 @@ $(this).remove();
 
 
 
-<%= form_tag("/",method: "get", class: "directUpload" ) do |f| %>
+<%= form_for(@product, html: { class: "directUpload" }) do |f| %>
 	 <%= f.file_field :avatar_url %>
 	<%= submit_tag("Save") %>
 <% end %>
