--- a/app/views/home/product.html.erb
+++ b/app/views/home/product.html.erb
@@ -271,7 +271,7 @@ $(this).remove();
 
 
 
-<%= form_for(html: { class: "directUpload" }) do |f| %>
+<%= form_tag("/color",method: "get") do |f| %>
 	 <%= f.file_field :avatar_url %>
 	<%= submit_tag("Save") %>
 <% end %>
