--- a/app/views/home/product.html.erb
+++ b/app/views/home/product.html.erb
@@ -272,6 +272,7 @@ $(this).remove();
 
 
 <%= form_tag("/color",method: "get") do |f| %>
+	<%= f.file_field :avatar_url %>
 	<%= submit_tag("Save") %>
 <% end %>
 <script type="text/javascript">
