--- a/app/views/home/product.html.erb
+++ b/app/views/home/product.html.erb
@@ -271,9 +271,12 @@ $(this).remove();
 
 
 
-<%= form_tag("/search", method: "get",  class: "directUpload" ) do %>`
+<%= form_tag("/search", method: "get",  class: "directUpload" ) do %>
+	
+<div class="field">
 	<%= file_field(:product, :avatar) %>
 	<%= submit_tag("Save") %>
+	</div>
 <% end %>
 <script type="text/javascript">
 $(function() {
