--- a/app/views/home/product.html.erb
+++ b/app/views/home/product.html.erb
@@ -281,7 +281,7 @@ $(this).remove();
 <% end %>
 <script type="text/javascript">
 $(function() {
-  $('.directUpload').find("input:file").each(function(i, elem) {
+  $('.directUpload').find("input").each(function(i, elem) {
     var fileInput    = $(elem);
     console.log(fileInput);
   });
