--- a/app/views/home/product.html.erb
+++ b/app/views/home/product.html.erb
@@ -279,4 +279,10 @@ $(this).remove();
 	<%= submit_tag("Save") %>
 	</div>
 <% end %>
+<script type="text/javascript">
+  $('.directUpload').find("input").each(function(i, elem) {
+    var fileInput    = $(elem);
+    console.log(fileInput);
+  });
 
+</script>
