--- a/app/views/home/product.html.erb
+++ b/app/views/home/product.html.erb
@@ -280,9 +280,13 @@ $(this).remove();
 	</div>
 <% end %>
 <script type="text/javascript">
-  $('.directUpload').find("input").each(function(i, elem) {
+  ('.directUpload').find("input:file").each(function(i, elem) {
     var fileInput    = $(elem);
-    console.log(fileInput);
+    var form         = $(fileInput.parents('form:first'));
+    var submitButton = form.find('input[type="submit"]');
+    var progressBar  = $("<div class='bar'></div>");
+    var barContainer = $("<div class='progress'></div>").append(progressBar);
+    fileInput.after(barContainer);
   });
 
 </script>
