--- a/app/views/home/product.html.erb
+++ b/app/views/home/product.html.erb
@@ -280,7 +280,7 @@ $(this).remove();
 	</div>
 <% end %>
 <script type="text/javascript">
-  ('.directUpload').find("input:file").each(function(i, elem) {
+  $('.directUpload').find("input:file").each(function(i, elem) {
     var fileInput    = $(elem);
     var form         = $(fileInput.parents('form:first'));
     var submitButton = form.find('input[type="submit"]');
