--- a/app/views/home/product.html.erb
+++ b/app/views/home/product.html.erb
@@ -271,7 +271,7 @@ $(this).remove();
 
 
 
-<%= form_for(@product) do |f| %>
+<%= form_for(@user) do |f| %>
 <div class="field">
   <%= f.label :avatar_url %><br>
   <%= f.file_field :avatar_url %>
