--- a/app/views/home/product.html.erb
+++ b/app/views/home/product.html.erb
@@ -273,8 +273,8 @@ $(this).remove();
 
 <%= form_tag(controller: "home", action: "product", method: "post") do %>
 <div class="field">
-  <%= label :avatar_url %><br>
-  <%= file_field :avatar_url %>
+  <%= label :product :avatar_url %><br>
+  <%= file_field :product :avatar_url %>
 </div>
 <% end %>
 <script type="text/javascript">
