--- a/app/views/home/product.html.erb
+++ b/app/views/home/product.html.erb
@@ -298,3 +298,16 @@ $(this).remove();
   });
 
 </script>
+<style type="text/css">
+.progress {
+  max-width: 600px;
+  margin:    0.2em 0 0.2em 0;
+}
+
+.progress .bar {
+  height:  1.2em;
+  padding: 0.2em;
+  color:   white;
+  display: none;
+}
+</style>
