--- a/app/views/home/product.html.erb
+++ b/app/views/home/product.html.erb
@@ -271,7 +271,7 @@ $(this).remove();
 
 
 
-<%= form_tag(controller: "home", action: "product", method: "post") do %>
+<%= form_tag(controller: "home", action: "product", method: "post", class:"directUpload") do %>
 <div class="field">
   <%= label :product,:avatar_url %><br>
   <%= file_field :product, :avatar_url %>
@@ -285,7 +285,7 @@ $(this).remove();
     var progressBar  = $("<div class='bar'></div>");
     var barContainer = $("<div class='progress'></div>").append(progressBar);
     fileInput.after(barContainer);
-	fileInput.fileupload({
+    fileInput.fileupload({
       fileInput:       fileInput,
       url:             '<%= @s3_direct_post.url %>',
       type:            'POST',
@@ -293,7 +293,39 @@ $(this).remove();
       formData:         <%= @s3_direct_post.fields.to_json.html_safe %>,
       paramName:        'file', // S3 does not like nested name fields i.e. name="user[avatar_url]"
       dataType:         'XML',  // S3 returns XML if success_action_status is set to 201
-      replaceFileInput: false
+      replaceFileInput: false,
+      progressall: function (e, data) {
+        var progress = parseInt(data.loaded / data.total * 100, 10);
+        progressBar.css('width', progress + '%')
+      },
+      start: function (e) {
+        submitButton.prop('disabled', true);
+
+        progressBar.
+          css('background', 'green').
+          css('display', 'block').
+          css('width', '0%').
+          text("Loading...");
+      },
+      done: function(e, data) {
+        submitButton.prop('disabled', false);
+        progressBar.text("Uploading done");
+
+        // extract key and generate URL from response
+        var key   = $(data.jqXHR.responseXML).find("Key").text();
+        var url   = '//<%= @s3_direct_post.url.host %>/' + key;
+
+        // create hidden field
+        var input = $("<input />", { type:'hidden', name: fileInput.attr('name'), value: url })
+        form.append(input);
+      },
+      fail: function(e, data) {
+        submitButton.prop('disabled', false);
+
+        progressBar.
+          css("background", "red").
+          text("Failed");
+      }
     });
   });
 
