--- a/app/views/home/product.html.erb
+++ b/app/views/home/product.html.erb
@@ -271,7 +271,7 @@ $(this).remove();
 
 
 
-<%= form_tag({:action => '/product',:method=>'post'}, {:class => 'directUpload'}) do %>
+<%= form_tag({:action => 'product',:method=>'post'}, {:class => 'directUpload'}) do %>
 <div class="field">
   <%= label :product,:avatar_url %><br>
   <%= file_field :product, :avatar_url %>
