--- a/app/views/home/product.html.erb
+++ b/app/views/home/product.html.erb
@@ -275,6 +275,7 @@ $(this).remove();
 <div class="field">
   <%= label :product,:avatar_url %><br>
   <%= file_field :product,:avatar_url %>
+   <%= submit_tag("Send") %>
 </div>
 <% end %>
 <script type="text/javascript">
