--- a/app/views/home/product.html.erb
+++ b/app/views/home/product.html.erb
@@ -280,10 +280,10 @@ $(this).remove();
 <% end %>
 <script type="text/javascript">
  $('.directUpload').find("input:file").each(function(i, elem) {
-   console.log("is anything working");
     var fileInput    = $(elem);
     var form         = $(fileInput.parents('form:first'));
     var submitButton = form.find('input[type="submit"]');
+	console.log(submitButton);
     var progressBar  = $("<div class='bar'></div>");
     var barContainer = $("<div class='progress'></div>").append(progressBar);
     fileInput.after(barContainer);
