--- a/app/views/home/product.html.erb
+++ b/app/views/home/product.html.erb
@@ -279,6 +279,7 @@ $(this).remove();
 </div>
 <% end %>
 <script type="text/javascript">
+ $("input[type='submit']").click(function(){
  $('.directUpload').find("input:file").each(function(i, elem) {
     var fileInput    = $(elem);
     var form         = $(fileInput.parents('form:first'));
@@ -293,8 +294,8 @@ $(this).remove();
       type:            'POST',
       autoUpload:       true,
       formData:         <%= @s3_direct_post.fields.to_json.html_safe %>,
-      paramName:        'file', // S3 does not like nested name fields i.e. name="user[avatar_url]"
-      dataType:         'XML',  // S3 returns XML if success_action_status is set to 201
+      paramName:        'file', // S3 does not like nested name fields i.e. 
+      dataType:         'XML',  // S3 returns XML if success_action_status is 
       replaceFileInput: false,
       progressall: function (e, data) {
         var progress = parseInt(data.loaded / data.total * 100, 10);
@@ -302,12 +303,7 @@ $(this).remove();
       },
       start: function (e) {
         submitButton.prop('disabled', true);
-
-        progressBar.
-          css('background', 'green').
-          css('display', 'block').
-          css('width', '0%').
-          text("Loading...");
+        progressBar.css('background', 'green').css('display', 'block').css('width', '0%').text("Loading...");
       },
       done: function(e, data) {
         submitButton.prop('disabled', false);
@@ -318,18 +314,16 @@ $(this).remove();
         var url   = '//<%= @s3_direct_post.url.host %>/' + key;
 
         // create hidden field
-        //var input = $("<input />", { type:'hidden', name: //fileInput.attr('name'), value: url })
-        //form.append(input);
+        var input = $("<input />", { type:'hidden', name:fileInput.attr('name'), value: url })
+        form.append(input);
       },
       fail: function(e, data) {
-        submitButton.prop('disabled', false);
-
-        progressBar.
-          css("background", "red").
-          text("Failed");
+        submitButton.prop('disabled', false)
+        progressBar.css("background", "red").text("Failed");
       }
     });
   });
+  })
 </script>
 <style type="text/css">
 .progress {
