--- a/app/views/home/product.html.erb
+++ b/app/views/home/product.html.erb
@@ -280,6 +280,9 @@ $(this).remove();
 </div>
 <% end %>
 <script type="text/javascript">
+ var fileInput    = $("#fileupload");
+ var progressBar  = $("<div class='bar'></div>");
+    var barContainer = $("<div class='progress'></div>").append(progressBar);
 $("#fileupload").fileupload({
       fileInput:       fileInput,
       url:             '<%= @s3_direct_post.url %>',
