--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -8,5 +8,5 @@
  *= require shopify_app_buttons
  *= require shopify_app
  *= require jquery.minicolors
- *= require jquery.fileupload-ui/basic
+ *= require jquery.fileupload-ui
 */
