--- a/app/views/home/product.html.erb
+++ b/app/views/home/product.html.erb
@@ -296,6 +296,7 @@ $(this).remove();
       dataType:         'XML',  // S3 returns XML if success_action_status is 
       replaceFileInput: false,
       progressall: function (e, data) {
+	   console.log("started");
         var progress = parseInt(data.loaded / data.total * 100, 10);
         progressBar.css('width', progress + '%')
       },
@@ -305,6 +306,7 @@ $(this).remove();
         progressBar.css('background','green').css('display','block').css('width', '0%').text("Loading...");
       },
       done: function(e, data) {
+	   console.log("started");
         submitButton.prop('disabled', false);
         progressBar.text("Uploading done");
 
@@ -317,6 +319,7 @@ $(this).remove();
         form.append(input);
       },
       fail: function(e, data) {
+	   console.log("started");
         submitButton.prop('disabled', false)
         progressBar.css("background", "red").text("Failed");
       }
