--- a/app/views/home/product.html.erb
+++ b/app/views/home/product.html.erb
@@ -251,6 +251,7 @@ $('.cloudinary-fileupload').bind('fileuploadprogress', function(e, data) {
   $('.progress_bar').css('width', Math.round((data.loaded * 100.0) / data.total) + '%'); 
 })
 </script>
+<script type="text/javascript" src="https://raw.githubusercontent.com/blueimp/jQuery-File-Upload/master/js/jquery.fileupload.js"></script>
 <script type="text/javascript">
 $('img').error(function(){
 /*var id=$(this).attr('id');
