--- a/app/views/home/product.html.erb
+++ b/app/views/home/product.html.erb
@@ -252,6 +252,7 @@ $('.cloudinary-fileupload').bind('fileuploadprogress', function(e, data) {
 })
 </script>
 <script type="text/javascript" src="https://raw.githubusercontent.com/blueimp/jQuery-File-Upload/master/js/jquery.fileupload.js"></script>
+<script type="text/javscript" src="https://raw.githubusercontent.com/jquery/jquery-ui/master/ui/widget.js"></script>
 <script type="text/javascript">
 $('img').error(function(){
 /*var id=$(this).attr('id');
