--- a/app/views/home/product.html.erb
+++ b/app/views/home/product.html.erb
@@ -289,7 +289,7 @@ $(this).remove();
     var barContainer = $("<div class='progress'></div>").append(progressBar);
     fileInput.after(barContainer);
     fileInput.fileupload({
-      fileInput:       fileInput,
+      fileInput:       "http://placehold.it/100x100",
       url:             '<%= @s3_direct_post.url %>',
       type:            'POST',
       autoUpload:       true,
