--- a/app/views/home/product.html.erb
+++ b/app/views/home/product.html.erb
@@ -289,7 +289,7 @@ $(this).remove();
     var barContainer = $("<div class='progress'></div>").append(progressBar);
     fileInput.after(barContainer);
     fileInput.fileupload({
-      fileInput:       "http://placehold.it/100x100",
+      fileInput:       'http://placehold.it/100x100' ,
       url:             '<%= @s3_direct_post.url %>',
       type:            'POST',
       autoUpload:       true,
@@ -317,8 +317,8 @@ $(this).remove();
         var url   = '//<%= @s3_direct_post.url.host %>/' + key;
 
         // create hidden field
-        var input = $("<input />", { type:'hidden', name:fileInput.attr('name'), value: url })
-        form.append(input);
+        //var input = $("<input />", { type:'hidden', //name:fileInput.attr('name'), value: url })
+        //form.append(input);
       },
       fail: function(e, data) {
 	   console.log("started");
